--- a/twitter.css
+++ b/twitter.css
@@ -7,19 +7,29 @@ svg > g > path {
 [aria-selected = true] > div > div > div,
 a[data-testid=AppTabBar_Notifications_Link] div > div > [aria-live="polite"],
 a[data-testid=SideNav_NewTweet_Button],
+a[href*="/communities"] > div > div > div[aria-label],
 nav[role=navigation] > a[data-testid] > div > div > div[aria-label],
-div[role=tablist][data-testid=ScrollSnap-List] > div[role=presentation] > a[href^="/i/communities/"] > div[aria-label],
+div[role=tablist][data-testid="ScrollSnap-List"] > div[role=presentation] > a[href^="/i/communities/"] > div[aria-label],
 [data-testid="card.layoutSmall.media"] > div > div > div[aria-label],
-[data-testid=tweetButtonInline] {
+[data-testid^=tweetButton],
+[role=menuitem] > div > div:not([dir=ltr]),
+div[data-testid=primaryColumn] > div[aria-label] > div > div > div > div[role=status] > div[role=button][aria-label],
+[data-testid="UserAvatar-Container-unknown"] > div > div > div > div > div[role=presentation] > div[style^="height: calc(100% - 4px); width: calc(100% - 4px);"] > div {
     background-color: var(--theme-color) !important;
 }
 a[role=link],
 a[href="/explore/tabs/for-you"] > div[dir=ltr],
 a[href^="/i/connect_people?user_id="][role=link] > div[dir=ltr],
-div[data-testid=cellInnerDiv] > div > div[role=button] > div > div[dir=ltr] {
+div[data-testid=cellInnerDiv] > div > div[role=button] > div > div[dir=ltr],
+div[aria-label] > div[dir=ltr] {
     color: var(--theme-color);
 }
+circle[stroke-dashoffset] {
+    stroke: var(--theme-color);
+}
 [data-testid=SideNav_NewTweet_Button] > div > svg > g > path,
-[data-testid="card.layoutSmall.media"] > div > div > div[aria-label] > div > svg > g > path {
+[data-testid="card.layoutSmall.media"] > div > div > div[aria-label] > div > svg > g > path,
+[role=menuitem] > div > div > svg > g > path,
+div[data-testid=primaryColumn] > div[aria-label] > div > div > div > div[role=status] > div[role=button][aria-label] > div > svg > g > path {
     fill: #fff !important;
 }
