--- a/twitter.css
+++ b/twitter.css
@@ -18,7 +18,8 @@ div[role=tablist][data-testid="ScrollSnap-List"] > div[role=presentation] > a[hr
 [role=menuitem] > div > div:not([dir=ltr]),
 div[data-testid=primaryColumn] > div[aria-label] > div > div > div > div[role=status] > div[role=button][aria-label],
 [data-testid="UserAvatar-Container-unknown"] > div > div > div > div > div[role=presentation] > div[style^="height: calc(100% - 4px); width: calc(100% - 4px);"] > div,
-[role=alert][data-testid=toast] {
+[role=alert][data-testid=toast],
+[role=article][data-testid=tweet] > div > div > div > div > div > div > div[role=button] > div> div > div > div:not([dir=ltr]) {
     background-color: var(--theme-color-rgb) !important;
 }
 div > div> div > div > div> div> div> div> div>div > div > div > div > div[role=button]:not([data-testid^=tweetButton]):hover {
@@ -28,7 +29,8 @@ a[role=link],
 a[href="/explore/tabs/for-you"] > div[dir=ltr],
 a[href^="/i/connect_people?user_id="][role=link] > div[dir=ltr],
 div[data-testid=cellInnerDiv] > div > div[role=button] > div > div[dir=ltr],
-div[aria-label] > div[dir=ltr] {
+div[aria-label] > div[dir=ltr],
+article[role=article][data-testid=tweet] > div > a[href][role=link] > div > div > div[dir=ltr] {
     color: var(--theme-color-rgb);
 }
 circle[stroke-dashoffset] {
@@ -37,6 +39,7 @@ circle[stroke-dashoffset] {
 [data-testid=SideNav_NewTweet_Button] > div > svg > g > path,
 [data-testid="card.layoutSmall.media"] > div > div > div[aria-label] > div > svg > g > path,
 [role=menuitem] > div > div > svg > g > path,
-div[data-testid=primaryColumn] > div[aria-label] > div > div > div > div[role=status] > div[role=button][aria-label] > div > svg > g > path {
+div[data-testid=primaryColumn] > div[aria-label] > div > div > div > div[role=status] > div[role=button][aria-label] > div > svg > g > path,
+[role=article][data-testid=tweet] > div > div > div > div > div > div > div[role=button] > div> div > div > div:not([dir=ltr]) > svg > g > path {
     fill: #fff !important;
 }
